# Decision-Intelligence-Assistant

./: docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: compare.py  ml.py
backend/app/models/: pipeline.pkl
backend/app/schemas/: compare_schema.py  ml_schema.py
backend/app/services/: llm_service.py  ml_service.py  rag_service.py
backend/app/utils/: logger.py
backend/chroma_db/: chroma.sqlite3
backend/logs/: queries.jsonl
backend/scripts/: ingest.py
chroma_db/2dc011dd-fa73-4ae0-89d8-71a38306bb57/: index_metadata.pickle
frontend/: Dockerfile  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: RecentQueries.jsx  ResultCard.jsx  Sidebar.jsx
notebooks/: ml_workflow.ipynb
